--- a/examples/index.html
+++ b/examples/index.html
@@ -68,7 +68,7 @@
 
         vertices = [[162, 332], [182, 299], [141, 292], [158, 264], [141, 408], [160, 400], [177, 430], [151, 442], [155, 425], [134, 430], [126, 447], [139, 466], [160, 471], [167, 447], [182, 466], [192, 442], [187, 413], [173, 403], [168, 425], [153, 413], [179, 275], [163, 292], [134, 270], [143, 315], [177, 320], [163, 311], [162, 281], [182, 255], [141, 226], [156, 235], [173, 207], [187, 230], [204, 194], [165, 189], [145, 201], [158, 167], [190, 165], [206, 145], [179, 153], [204, 114], [221, 138], [243, 112], [248, 139], [177, 122], [179, 99], [196, 82], [219, 90], [240, 75], [218, 61], [228, 53], [211, 34], [197, 51], [179, 65], [155, 70], [165, 85], [134, 80], [124, 58], [153, 44], [173, 34], [192, 27], [156, 19], [119, 32], [128, 17], [138, 36], [100, 58], [112, 73], [100, 92], [78, 100], [83, 78], [61, 63], [80, 44], [100, 26], [60, 39], [43, 71], [34, 54], [32, 90], [53, 104], [60, 82], [66, 99], [247, 94], [187, 180], [221, 168]]
 
-        vertices = [[141, 408], [160, 400], [177, 430], [151, 442], [155, 425], [134, 430], [126, 447], [139, 466], [160, 471], [167, 447], [182, 466], [192, 442], [187, 413]]
+        // vertices = [[141, 408], [160, 400], [177, 430], [151, 442], [155, 425], [134, 430], [126, 447], [139, 466], [160, 471], [167, 447], [182, 466], [192, 442], [187, 413]]
 
 
         // init pixels
@@ -80,41 +80,34 @@
             ctx.closePath();
         }
 
-        var idxs = hull(vertices, 50);
-        // console.table(idxs);
-        ctx.fillStyle="red";
-        idxs.forEach(function(i) {
-            // ctx.beginPath();
-            // ctx.arc(vertices[i][0], vertices[i][1], 2, 0, 2 * Math.PI, true);
-            // ctx.fill();
-            // ctx.closePath();
-
-            // ctx.beginPath();
-            // console.log(vertices[idx][0], vertices[idx][1]);
-            // ctx.lineTo(vertices[idx][0], vertices[idx][1]);
-            // ctx.moveTo(vertices[idx][0], vertices[idx][1]);
-
-            var p1X = vertices[i[0]][0],
-                p1Y = vertices[i[0]][1];
-            ctx.moveTo(p1X, p1Y);
-            var p2X = vertices[i[1]][0],
-                p2Y = vertices[i[1]][1];
-            ctx.lineTo(p2X, p2Y);
-            var p3X = vertices[i[2]][0],
-                p3Y = vertices[i[2]][1];
-            ctx.lineTo(p3X, p3Y);
-            ctx.closePath();
-            ctx.stroke();
-        });
-
-        // var pixels = hull(vertices, 50);
-        // ctx.beginPath();
-        // pixels.forEach(function(p) {
-        //     ctx.lineTo(p[0], p[1]);
-        //     ctx.moveTo(p[0], p[1]);
+        // var idxs = hull(vertices, 50);
+        // ctx.fillStyle="red";
+        // idxs.forEach(function(i) {
+        //     var p1X = vertices[i[0]][0],
+        //         p1Y = vertices[i[0]][1];
+        //     ctx.moveTo(p1X, p1Y);
+        //     var p2X = vertices[i[1]][0],
+        //         p2Y = vertices[i[1]][1];
+        //     ctx.lineTo(p2X, p2Y);
+        //     var p3X = vertices[i[2]][0],
+        //         p3Y = vertices[i[2]][1];
+        //     ctx.lineTo(p3X, p3Y);
+        //     ctx.closePath();
         //     ctx.stroke();
         // });
-        // ctx.closePath();
+
+        ctx.strokeStyle="blue";
+        var idxs = hull(vertices, 50);
+
+        ctx.beginPath();
+        idxs.forEach(function(i) {
+            ctx.lineTo(vertices[i][0], vertices[i][1]);
+            ctx.moveTo(vertices[i][0], vertices[i][1]);
+            ctx.stroke();
+        });
+        ctx.lineTo(vertices[idxs[0]][0], vertices[idxs[0]][1]);
+        ctx.stroke();
+        ctx.closePath();
 }
     </script>
 </body>
