hull function refactoring

--- a/examples/index.html
+++ b/examples/index.html
@@ -77,7 +77,7 @@
             ctx.closePath();
         }
 
-        // hull.DEBUG = ctx;
+        hull.DEBUG = ctx;
 
         // draw hull pixels
         var idxs = hull(vertices, 50);
