--- a/examples/index.html
+++ b/examples/index.html
@@ -11,60 +11,7 @@
     <script type="text/javascript">
     window.onload = function() {
         var c = document.getElementById('canv'),
-            ctx = window.ctx = c.getContext('2d');
-        c.onclick = function(e) {
-            console.log('{ x:' + e.offsetX + ', y:' + e.offsetY + '}');
-        }
-
-        var vertices = [
-            [225, 117], 
-            [223, 98], 
-            [204, 79], 
-            [186, 81], 
-            [172, 92], 
-            [163, 133], 
-            [167, 154], 
-            [169, 166], 
-            [180, 211], 
-            [209, 215], 
-            [250, 210], 
-            [278, 197], 
-            [260, 176], 
-            [249, 184], 
-            [225, 194], 
-            [200, 194], 
-            [199, 163], 
-            [194, 138], 
-            [194, 110], 
-            [212, 95], 
-            [236, 111], 
-            [247, 137], 
-            [273, 130], 
-            [273, 112], 
-            [251, 103], 
-            [230, 91],
-            [257, 122],
-            [246, 111],
-            [235, 106],
-            [202, 89],
-            [181, 100],
-            [187, 107],
-            [175, 119],
-            [141, 140],
-            [184, 129],
-            [184, 144],
-            [179, 144],
-            [180, 177],
-            [188, 177],
-            [188, 199],
-            [197, 202],
-            [199, 216],
-            [219, 209],
-            [238, 207],
-            [238, 197],
-            [253, 199],
-            [261, 189]
-        ];
+            ctx = c.getContext('2d');
 
         vertices = [[162, 332], [182, 299], [141, 292], [158, 264], [141, 408], [160, 400], [177, 430], [151, 442], [155, 425], [134, 430], [126, 447], [139, 466], [160, 471], [167, 447], [182, 466], [192, 442], [187, 413], [173, 403], [168, 425], [153, 413], [179, 275], [163, 292], [134, 270], [143, 315], [177, 320], [163, 311], [162, 281], [182, 255], [141, 226], [156, 235], [173, 207], [187, 230], [204, 194], [165, 189], [145, 201], [158, 167], [190, 165], [206, 145], [179, 153], [204, 114], [221, 138], [243, 112], [248, 139], [177, 122], [179, 99], [196, 82], [219, 90], [240, 75], [218, 61], [228, 53], [211, 34], [197, 51], [179, 65], [155, 70], [165, 85], [134, 80], [124, 58], [153, 44], [173, 34], [192, 27], [156, 19], [119, 32], [128, 17], [138, 36], [100, 58], [112, 73], [100, 92], [78, 100], [83, 78], [61, 63], [80, 44], [100, 26], [60, 39], [43, 71], [34, 54], [32, 90], [53, 104], [60, 82], [66, 99], [247, 94], [187, 180], [221, 168]];
 
@@ -77,7 +24,7 @@
             ctx.closePath();
         }
 
-        hull.DEBUG = ctx;
+        // hull.DEBUG = ctx;
 
         // draw hull pixels
         var idxs = hull(vertices, 50);
@@ -91,7 +38,7 @@
         ctx.lineTo(vertices[idxs[0]][0], vertices[idxs[0]][1]);
         ctx.stroke();
         ctx.closePath();
-}
+    }
     </script>
 </body>
 </html>
