write part of readme

--- a/examples/polygon.html
+++ b/examples/polygon.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>
-        Just call <code>hull(vertices, 50)</code> to recive hull of this point set.
+        Just call <code>hull(vertices, 50)</code> to receive hull of point set.
     </p>
     <p>Result: </p>
     <canvas id="canv" width="500" height="450" style="border: 1px solid black;"></canvas>
