--- a/examples/debug.html
+++ b/examples/debug.html
@@ -907,7 +907,7 @@
         }
 
         // get and draw hull  
-        var idxs = hull(vertices, 19);      
+        var idxs = hull(vertices, 19, ctx);      
         // ctx.strokeStyle="blue";
         // ctx.beginPath();
         // idxs.forEach(function(i) {
