remove intersection stub

--- a/debug/index.html
+++ b/debug/index.html
@@ -15,11 +15,17 @@
 
         vertices = [
             [10, 10],
+            // [10, 15], // TODO: not full subset?
             [20, 20],
             [10, 30],
+            
             [40, 10],
             [30, 20],
-            [40, 30]
+            [40, 30],
+
+            [60, 10],
+            [50, 20],
+            [60, 30]
         ];
 
         // draw all pixels
