change debug page

--- a/debug/index.html
+++ b/debug/index.html
@@ -28,7 +28,8 @@
         // ];
 
 
-vertices = [[195, 164], [195, 162], [205, 130], [206, 140], [196, 178], [196, 192], [202, 182], [237, 175], [300, 84], [311, 101], [212, 102], [314, 107], [220, 112], [335, 109], [321, 102], [290, 77],  [55, 129], [80, 120], [35, 110], [26, 106], [45, 100], [65, 94]];
+// vertices = [[195, 164], [195, 162], [205, 130], [206, 140], [196, 178], [196, 192], [202, 182], [237, 175], [300, 84], [311, 101], [212, 102], [314, 107], [220, 112], [335, 109], [321, 102], [290, 77],  [55, 129], [80, 120], [35, 110], [26, 106], [45, 100], [65, 94]];
+
 console.log(vertices.length);
 
         // draw all pixels
