convex hull done without refactoring

--- a/debug/index.html
+++ b/debug/index.html
@@ -20,33 +20,33 @@
             console.log('[' + e.offsetX + ', ' + e.offsetY + ']');
         }
 
-vertices = [
-    [10, 116],
-    [21, 131],
-    [31, 54],
-    [51, 43],
-    [65, 58],
-    [75, 95],
-    [95, 70],
-    [200, 122],
-    [269, 130]
-];
+// vertices = [
+//     [10, 116],
+//     [21, 131],
+//     [31, 54],
+//     [51, 43],
+//     [65, 58],
+//     [75, 95],
+//     [95, 70],
+//     [200, 122],
+//     [269, 130]
+// ];
 
-        vertices = [
-            [5, 85],
-            [15, 90],
-            [30, 70],
-            [35, 130],
-            [40, 131],
-            [44, 66],
-            [48, 65],
-            [49, 38],
-            [50, 30],
-            [60, 61],
-            [110, 134],
-            [130, 132],
-            [140, 124],
-            [160, 154]];
+//         vertices = [
+//             [5, 85],
+//             [15, 90],
+//             [30, 70],
+//             [35, 130],
+//             [40, 131],
+//             [44, 66],
+//             [48, 65],
+//             [49, 38],
+//             [50, 30],
+//             [60, 61],
+//             [110, 134],
+//             [130, 132],
+//             [140, 124],
+//             [160, 154]];
 
         // vertices = [
         //     [10, 15],
