begin concave implementation

--- a/debug/index.html
+++ b/debug/index.html
@@ -50,19 +50,19 @@
             [140, 124],
             [160, 154]];
 
-        vertices = [
-            [10, 15],
-            [20, 20],
-            [10, 30],
+        // vertices = [
+        //     [10, 15],
+        //     [20, 20],
+        //     [10, 30],
             
-            [40, 15],
-            [30, 20],
-            [40, 30],
+        //     [40, 15],
+        //     [30, 20],
+        //     [40, 30],
 
-            // [60, 10],
-            // [50, 20],
-            // [60, 30]
-        ];
+        //     // [60, 10],
+        //     // [50, 20],
+        //     // [60, 30]
+        // ];
 
         // vertices = [
         //     [26, 106],
