draw concave hull with constant dencity and too slow

--- a/debug/index.html
+++ b/debug/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Concave hull example</title>
     <script src="../src/hull.js"></script>
+    <script src="../src/segments.js"></script>
 </head>
 <body>
     <canvas id="canv" width="341" height="238" style="border: 1px solid black; position: absolute; left: 0px; top: 0px;"></canvas>
@@ -34,21 +35,21 @@
 //     [269, 130]
 // ];
 
-        vertices = [
-            [5, 85],
-            [15, 90],
-            [30, 70],
-            [35, 130],
-            [40, 131],
-            [44, 66],
-            [48, 65],
-            [49, 38],
-            [50, 30],
-            [60, 61],
-            [110, 134],
-            [130, 132],
-            [140, 124],
-            [160, 154]];
+        // vertices = [
+        //     [5, 85],
+        //     [15, 90],
+        //     [30, 70],
+        //     [35, 130],
+        //     [40, 131],
+        //     [44, 66],
+        //     [48, 65],
+        //     [49, 38],
+        //     [50, 30],
+        //     [60, 61],
+        //     [110, 134],
+        //     [130, 132],
+        //     [140, 124],
+        //     [160, 154]];
 
         // vertices = [
         //     [10, 15],
