acos replaced to atan2 and will be replaced to most performance cos comparison soon

--- a/debug/index.html
+++ b/debug/index.html
@@ -132,6 +132,15 @@
         //     context.moveTo(tox, toy);
         //     context.lineTo(tox-headlen*Math.cos(angle+Math.PI/6),toy-headlen*Math.sin(angle+Math.PI/6));
         // }
+
+
+        var o = [0,0], a = [0,10], b = [10,10];
+        var deg = _angle(o, a, b) * 180 / Math.PI;
+        console.log(_angle(o, a, b), deg);
+        console.log(_cos(o,a,b), Math.cos(_angle(o, a, b)));
+
+        // console.log(_angle1(o, a, b));
+
     }
     </script>
 </body>
