--- a/debug/index.html
+++ b/debug/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Concave hull example</title>
-    <script src="../src/hull.js"></script>
-    <script src="../src/segments.js"></script>
+    <script src="../dist/hull.js"></script>
+<!--    <script src="../src/segments.js"></script>-->
 </head>
 <body>
-    <!-- <canvas id="canv" width="341" height="238" style="border: 1px solid black; position: absolute; left: 0px; top: 0px;"></canvas>
-    <canvas id="canv1" width="341" height="238" style="border: 1px solid black; position: absolute; left: 0px; top: 0px;"></canvas> -->
     <canvas id="canv" width="400" height="600" style="border: 1px solid black; position: absolute; left: 0px; top: 0px;"></canvas>
     <canvas id="canv1" width="400" height="600" style="border: 1px solid black; position: absolute; left: 0px; top: 0px;"></canvas>
 
