--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <title>Hull.js by AndreyGeonya</title>
     <script src="./javascripts/hull.js"></script>
     <script src="./javascripts/dbscan.js"></script>
+    <script src="./javascripts/dbscan1.js"></script>
     <script src="./javascripts/pointset1.js"></script>
     <script src="./javascripts/pointset2.js"></script>
   </head>
@@ -34,8 +34,8 @@
 
 
 <!-- Example 1 -->
-<h3><a name="generate-hull-of-the-polygon" class="anchor" href="#generate-hull-of-the-polygon"><span class="octicon octicon-link"></span>Generate hull of the polygon.</a></h3>
-<p>Just call <code>hull</code> function to receive hull of the point set:</p>
+<h3><a name="ex1" class="anchor" href="#ex1"><span class="octicon octicon-link"></span>Ukrainian border</a></h3>
+<p>To receive hull (polygon) by point set just call <code>hull</code> function:</p>
 <pre><code>var pointset = [[168, 180], [168, 178], [168, 179], ...];
 var pts = hull(pointset);
 // ... draw pts</code></pre>
@@ -115,38 +115,34 @@ var pts = hull(pointset, 80);
 
 
 <!-- Example 2 -->
-<h3><a name="generate-hull-of-the-multipolygon" class="anchor" href="#generate-hull-of-the-multipolygon"><span class="octicon octicon-link"></span>Generate hull of the multipolygon.</a></h3>
-<p>If you want to get hulls of the point set that looks like multipolygon, then you need to call <code>hull</code> function for each subset (for each polygon). <br /> In this example we use LukaszKrawczyk's <a href="https://github.com/LukaszKrawczyk/clustering" target="_blank">density based clustering library</a> to split one large point set to several groups, after that we recive hulls for each of them:</p>
-<pre><code>var dbscan = new DBSCAN(),
-    clustersIndexes,
-    clusters = [],
+<h3><a name="ex2" class="anchor" href="#ex2"><span class="octicon octicon-link"></span>Chars</a></h3>
+<p>If you want to get hulls of the point set that looks like multipolygon, then you need to call <code>hull</code> function for each subset (for each polygon). <br /> In this example we use LukaszKrawczyk's <a href="https://github.com/LukaszKrawczyk/clustering" target="_blank">density based clustering library</a> (you can use any other implementation) to split one large point set to several groups, after that we recive hulls for each of them:</p>
+<pre><code>var clusters,
+    dbscan = new DBSCAN(),
     pointset = [[152, 38], [152, 39], [151, 39], ...];
 
-// get groups of points (clusters)
-clustersIndexes = dbscan.run(pointset, 90, 650);
-clustersIndexes.forEach(function(cluster) {
-    var cluster = cluster.map(function(i) {
-      return pointset[i];
+// get group of points (clusters)
+clusters = dbscan.run(pointset, 250, 50);
+clusters = clusters.map(function(cluster) {
+    return cluster.map(function(i) {
+        return pointset[i];  // map index to point
     });
-    clusters.push(cluster);
 });
 
 // get hulls
 clusters.forEach(function(pointset) {
-    var pts = hull(pointset, 5);
+    var pts = hull(pointset, 30);
     // ... draw pts
 });</code></pre>
 <p>
-  <canvas id="canv2" width="310" height="100"></canvas>
+  <canvas id="canv2" width="572" height="234"></canvas>
   <script>
   function example2() {
     var c = document.getElementById('canv2'),
         ctx = c.getContext('2d'),
         dbscan = new DBSCAN(),
-        clustersIndexes,
-        clusters = [],
-        colors = ["red", "green", "blue"],
-        colIdx = 0;
+        clusters,
+        colors = ["red", "green", "blue"];
 
     // draw all points
     ctx.fillStyle = "gray";
@@ -157,19 +153,20 @@ clusters.forEach(function(pointset) {
         ctx.closePath();
     }
 
-    // get groups of points (clusters)
-    clustersIndexes = dbscan.run(pointset2, 90, 650);
-    clustersIndexes.forEach(function(cluster) {
-        var cluster = cluster.map(function(i) {
-            return pointset2[i];
+    // get group of points (clusters)
+    clusters = dbscan.run(pointset2, 250, 50);
+    clusters = clusters.map(function(cluster) {
+        return cluster.map(function(i) {
+            return pointset2[i]; // map index to point
         });
-        clusters.push(cluster);
     });
 
-    // get and draw hulls for each cluster
+    // get and draw hull for each cluster
     ctx.lineWidth = 2;
     clusters.forEach(function(pointset, idx) {
-        var pts = hull(pointset, 5);
+        if(pointset.length < 50) { return; } // filter noise
+        
+        var pts = hull(pointset, 30);
         ctx.strokeStyle = colors[idx];
         ctx.beginPath();
         pts.forEach(function(pt) {
@@ -186,6 +183,44 @@ clusters.forEach(function(pointset) {
 </p>
 <!-- END: Example 2 -->
 
+<!-- Example 2_1 -->
+
+<p>Else (without clustering) you will receive something like that:</p>
+<pre><code>var pts = hull(pointset, 30);
+// ... draw pts
+</code></pre>
+<p>
+<canvas id="canv2_1" width="572" height="234"></canvas>
+<script>
+  function example2_1() {
+    var c = document.getElementById('canv2_1'),
+        ctx = c.getContext('2d');
+
+    // draw all points
+    ctx.fillStyle = "gray";
+    for (var i = 0; i < pointset2.length; i++) {
+        ctx.beginPath();
+        ctx.arc(pointset2[i][0], pointset2[i][1], 1, 0, 2 * Math.PI, true);
+        ctx.fill();
+        ctx.closePath();
+    }
+
+    // get and draw hull
+    var pts = hull(pointset2, 30);
+    ctx.strokeStyle = 'blue';
+    ctx.beginPath();
+    pts.forEach(function(pt) {
+        ctx.lineTo(pt[0], pt[1]);
+        ctx.stroke();
+        ctx.moveTo(pt[0], pt[1]);
+    });
+    ctx.lineTo(pts[0][0], pts[0][1]);
+    ctx.stroke();
+    ctx.closePath();
+  }
+  </script>
+</p>
+<!-- END: Example 2_1 -->
 
         </section>
       </div>
@@ -196,7 +231,8 @@ clusters.forEach(function(pointset) {
       example1();
       example1_1();
       example2();
-    }  
+      example2_1();
+    }
     </script>
   </body>
 </html>
